fixed page horizontal scroll, there was an additional unneed padding in the custom css .row.maintitle that was creating additional space. also added the row class, seems like this bootstrap grid class was already being used, on the other sections, this ensuring the footer expanded to full page width

--- a/client/styles/app.scss
+++ b/client/styles/app.scss
@@ -48,7 +48,6 @@ h2{
 
 .row.maintitle{
 	background-color:#007713;
-	padding: 15px;
 
 }
 /* ==========================================================================
